// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getViewBuilder > batched call 1`] = `
{
  "args": {
    "value": undefined,
  },
  "call": {
    "docs": undefined,
    "input": "0x00",
    "value": {
      "idx": 0,
      "name": undefined,
    },
  },
  "pallet": {
    "input": "0x18",
    "value": {
      "idx": 24,
      "name": "Utility",
    },
  },
}
`;

exports[`getViewBuilder > felloship referenda submit 1`] = `
{
  "args": {
    "value": undefined,
  },
  "call": {
    "docs": undefined,
    "input": "0x00",
    "value": {
      "idx": 0,
      "name": undefined,
    },
  },
  "pallet": {
    "input": "0x17",
    "value": {
      "idx": 23,
      "name": "FellowshipReferenda",
    },
  },
}
`;
